--- a/style/style.scss
+++ b/style/style.scss
@@ -67,16 +67,17 @@ div.container {
             flex: 1;
             max-width: 100%;
             background: transparent;
-            padding: 12px 0;
+            padding: 10px 0;
             text-align: right;
             font-weight: 700;
             font-size: 20px;
             color: $very-dark-cyan;
+            border-radius: 5px;
           }
         }
 
         div.tip-percent-container {
-          margin-bottom: 15px;
+          margin-bottom: 10px;
           display: grid;
           grid-template-columns: 1fr 1fr;
           grid-gap: 20px;
@@ -106,7 +107,7 @@ div.container {
         padding: 20px;
         border-radius: 20px;
         div.flex {
-          padding: 15px 0;
+          padding: 10px 0;
           display: flex;
           justify-content: space-between;
           h1.amount {
@@ -122,7 +123,7 @@ div.container {
 
         div.reset-container {
           button.reset {
-            padding: 12px;
+            padding: 10px;
             font-size: 16px;
             display: block;
             width: 100%;
@@ -142,7 +143,7 @@ div.container {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 20px;
+    padding-top: 10px;
     div.tip-container {
       div.splitter {
         display: grid;
@@ -152,6 +153,12 @@ div.container {
         section.container-left {
           div.tip-percent-container {
             grid-template-columns: repeat(3, 1fr);
+          }
+        }
+
+        section.container-right {
+          position: relative;
+          div.reset-container {
           }
         }
       }
