styling things up

--- a/style/style.scss
+++ b/style/style.scss
@@ -33,11 +33,12 @@ div.container {
       display: block;
       margin: 0 auto;
       margin-bottom: 40px;
+      width: 100px;
     }
 
     div.splitter {
       background: #fff;
-      padding: 40px 30px;
+      padding: 30px;
 
       border-top-left-radius: 20px;
       border-top-right-radius: 20px;
@@ -46,7 +47,7 @@ div.container {
         label.input-label {
           display: block;
           font-size: 14px;
-          padding: 12px 0;
+          padding: 10px 0;
           font-weight: 700;
           color: $dark-greyish-cyan;
           &.sl {
@@ -60,7 +61,7 @@ div.container {
           align-items: center;
           padding: 0 15px;
           padding-right: 30px;
-          margin-bottom: 15px;
+          margin-bottom: 10px;
           img.input-icon {
           }
           input.bill-input {
@@ -83,10 +84,10 @@ div.container {
           grid-gap: 20px;
           button.percent,
           button.custom {
-            padding: 10px;
+            padding: 8px;
             background: $very-dark-cyan;
             color: $white;
-            font-size: 20px;
+            font-size: 16px;
             border-radius: 5px;
             font-weight: 700;
 
@@ -104,14 +105,16 @@ div.container {
 
       section.container-right {
         background-color: $very-dark-cyan;
-        padding: 20px;
+        padding: 30px;
         border-radius: 20px;
+        position: relative;
         div.flex {
           padding: 10px 0;
           display: flex;
           justify-content: space-between;
           h1.amount {
             color: $primary-color;
+            font-size: 32px;
           }
           h5 {
             color: $white;
@@ -122,6 +125,11 @@ div.container {
         }
 
         div.reset-container {
+          position: absolute;
+          left: 30px;
+          bottom: 20px;
+          width: calc(100% - 60px);
+
           button.reset {
             padding: 10px;
             font-size: 16px;
@@ -143,7 +151,6 @@ div.container {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding-top: 10px;
     div.tip-container {
       div.splitter {
         display: grid;
