--- a/style/style.css
+++ b/style/style.css
@@ -32,11 +32,12 @@ div.container div.tip-container img.logo {
   display: block;
   margin: 0 auto;
   margin-bottom: 40px;
+  width: 100px;
 }
 
 div.container div.tip-container div.splitter {
   background: #fff;
-  padding: 40px 30px;
+  padding: 30px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
 }
@@ -44,7 +45,7 @@ div.container div.tip-container div.splitter {
 div.container div.tip-container div.splitter section.container-left label.input-label {
   display: block;
   font-size: 14px;
-  padding: 12px 0;
+  padding: 10px 0;
   font-weight: 700;
   color: #7f9c9f;
 }
@@ -63,7 +64,7 @@ div.container div.tip-container div.splitter section.container-left div.input-co
           align-items: center;
   padding: 0 15px;
   padding-right: 30px;
-  margin-bottom: 15px;
+  margin-bottom: 10px;
 }
 
 div.container div.tip-container div.splitter section.container-left div.input-container input.bill-input {
@@ -91,10 +92,10 @@ div.container div.tip-container div.splitter section.container-left div.tip-perc
 
 div.container div.tip-container div.splitter section.container-left div.tip-percent-container button.percent,
 div.container div.tip-container div.splitter section.container-left div.tip-percent-container button.custom {
-  padding: 10px;
+  padding: 8px;
   background: #00494d;
   color: white;
-  font-size: 20px;
+  font-size: 16px;
   border-radius: 5px;
   font-weight: 700;
 }
@@ -111,8 +112,9 @@ div.container div.tip-container div.splitter section.container-left div.tip-perc
 
 div.container div.tip-container div.splitter section.container-right {
   background-color: #00494d;
-  padding: 20px;
+  padding: 30px;
   border-radius: 20px;
+  position: relative;
 }
 
 div.container div.tip-container div.splitter section.container-right div.flex {
@@ -127,6 +129,7 @@ div.container div.tip-container div.splitter section.container-right div.flex {
 
 div.container div.tip-container div.splitter section.container-right div.flex h1.amount {
   color: #26c0ab;
+  font-size: 32px;
 }
 
 div.container div.tip-container div.splitter section.container-right div.flex h5 {
@@ -135,6 +138,13 @@ div.container div.tip-container div.splitter section.container-right div.flex h5
 
 div.container div.tip-container div.splitter section.container-right div.flex h6 {
   color: #c5e4e7;
+}
+
+div.container div.tip-container div.splitter section.container-right div.reset-container {
+  position: absolute;
+  left: 30px;
+  bottom: 20px;
+  width: calc(100% - 60px);
 }
 
 div.container div.tip-container div.splitter section.container-right div.reset-container button.reset {
@@ -159,7 +169,6 @@ div.container div.tip-container div.splitter section.container-right div.reset-c
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding-top: 10px;
   }
   div.container div.tip-container div.splitter {
     display: -ms-grid;
