--- a/style/style.css
+++ b/style/style.css
@@ -54,6 +54,11 @@ div.container div.tip-container div.splitter section.container-left label.input-
   margin-top: 30px;
 }
 
+div.container div.tip-container div.splitter section.container-left label.input-label span {
+  font-size: 10px;
+  color: red;
+}
+
 div.container div.tip-container div.splitter section.container-left div.input-container {
   background: #efefef;
   display: -webkit-box;
@@ -65,6 +70,11 @@ div.container div.tip-container div.splitter section.container-left div.input-co
   padding: 0 15px;
   padding-right: 30px;
   margin-bottom: 10px;
+  border-radius: 5px;
+}
+
+div.container div.tip-container div.splitter section.container-left div.input-container.error {
+  border: 1px solid red;
 }
 
 div.container div.tip-container div.splitter section.container-left div.input-container input.bill-input {
@@ -79,6 +89,19 @@ div.container div.tip-container div.splitter section.container-left div.input-co
   font-size: 20px;
   color: #00494d;
   border-radius: 5px;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  /* Firefox */
+}
+
+div.container div.tip-container div.splitter section.container-left div.input-container input.bill-input::-webkit-outer-spin-button, div.container div.tip-container div.splitter section.container-left div.input-container input.bill-input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+div.container div.tip-container div.splitter section.container-left div.input-container input.bill-input[type="number"] {
+  -moz-appearance: textfield;
 }
 
 div.container div.tip-container div.splitter section.container-left div.tip-percent-container {
@@ -114,7 +137,6 @@ div.container div.tip-container div.splitter section.container-right {
   background-color: #00494d;
   padding: 30px;
   border-radius: 20px;
-  position: relative;
 }
 
 div.container div.tip-container div.splitter section.container-right div.flex {
@@ -138,13 +160,6 @@ div.container div.tip-container div.splitter section.container-right div.flex h5
 
 div.container div.tip-container div.splitter section.container-right div.flex h6 {
   color: #c5e4e7;
-}
-
-div.container div.tip-container div.splitter section.container-right div.reset-container {
-  position: absolute;
-  left: 30px;
-  bottom: 20px;
-  width: calc(100% - 60px);
 }
 
 div.container div.tip-container div.splitter section.container-right div.reset-container button.reset {
@@ -184,6 +199,13 @@ div.container div.tip-container div.splitter section.container-right div.reset-c
   }
   div.container div.tip-container div.splitter section.container-right {
     position: relative;
+    position: relative;
+  }
+  div.container div.tip-container div.splitter section.container-right div.reset-container {
+    position: absolute;
+    left: 30px;
+    bottom: 20px;
+    width: calc(100% - 60px);
   }
 }
 /*# sourceMappingURL=style.css.map */
