--- a/style/style.css
+++ b/style/style.css
@@ -7,6 +7,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   font-family: "Space Mono", monospace;
+  -webkit-transition: all 300ms;
+  transition: all 300ms;
 }
 
 body {
@@ -32,7 +34,6 @@ div.container div.tip-container img.logo {
   display: block;
   margin: 0 auto;
   margin-bottom: 40px;
-  width: 100px;
 }
 
 div.container div.tip-container div.splitter {
@@ -48,6 +49,7 @@ div.container div.tip-container div.splitter section.container-left label.input-
   padding: 10px 0;
   font-weight: 700;
   color: #7f9c9f;
+  position: relative;
 }
 
 div.container div.tip-container div.splitter section.container-left label.input-label.sl {
@@ -57,6 +59,11 @@ div.container div.tip-container div.splitter section.container-left label.input-
 div.container div.tip-container div.splitter section.container-left label.input-label span {
   font-size: 10px;
   color: red;
+  position: absolute;
+  right: 0;
+  top: 50%;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
 }
 
 div.container div.tip-container div.splitter section.container-left div.input-container {
@@ -71,6 +78,11 @@ div.container div.tip-container div.splitter section.container-left div.input-co
   padding-right: 30px;
   margin-bottom: 10px;
   border-radius: 5px;
+  border: 1px solid transparent;
+}
+
+div.container div.tip-container div.splitter section.container-left div.input-container:hover {
+  border: 1px solid #26c0ab;
 }
 
 div.container div.tip-container div.splitter section.container-left div.input-container.error {
@@ -195,6 +207,10 @@ div.container div.tip-container div.splitter section.container-right div.reset-c
   background: #26c0ab;
   font-weight: bold;
   border-radius: 5px;
+}
+
+div.container div.tip-container div.splitter section.container-right div.reset-container button.reset.disabled {
+  opacity: 0.5;
 }
 
 @media screen and (min-width: 1000px) {
