--- a/style/style.css
+++ b/style/style.css
@@ -226,10 +226,10 @@ div.container div.tip-container div.splitter section.container-right div.reset-c
   div.container div.tip-container div.splitter {
     display: -ms-grid;
     display: grid;
-    max-width: 800px;
+    max-width: 680px;
     grid-column-gap: 20px;
-    -ms-grid-columns: 400px 300px;
-        grid-template-columns: 400px 300px;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
     border-radius: 20px;
   }
   div.container div.tip-container div.splitter section.container-left div.tip-percent-container {
