--- a/style/style.scss
+++ b/style/style.scss
@@ -206,9 +206,9 @@ div.container {
     div.tip-container {
       div.splitter {
         display: grid;
-        max-width: 800px;
+        max-width: 680px;
         grid-column-gap: 20px;
-        grid-template-columns: 400px 300px;
+        grid-template-columns: 1fr 1fr;
         border-radius: 20px;
         section.container-left {
           div.tip-percent-container {
