--- a/style/style.scss
+++ b/style/style.scss
@@ -137,6 +137,7 @@ div.container {
             text-align: right;
             font-size: 16px;
             font-weight: bold;
+            border-radius: 5px;
             &::-webkit-outer-spin-button,
             &::-webkit-inner-spin-button {
               -webkit-appearance: none;
@@ -147,7 +148,7 @@ div.container {
             &[type="number"] {
               -moz-appearance: textfield;
             }
-            &:hover,
+
             &:focus {
               border: 2px solid $primary-color;
               border-radius: 5px;
